# aibos-lens

./: .env.example  .gitignore  CLAUDE.md  PRD.md  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
docs/superpowers/plans/: 2026-04-04-v01-foundation.md
docs/superpowers/specs/: 2026-04-04-staged-roadmap-design.md
src/: App.tsx  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ContextCard.tsx  OverlayHeader.tsx  PiChat.tsx  QuickActions.tsx  TranscriptFeed.tsx
src/services/: analysis.ts  deepgram.ts  fireflies.ts  openclaw.ts
src/styles/: global.css
tests/: setup.ts  store.test.ts
tests/components/: ContextCard.test.tsx  PiChat.test.tsx  QuickActions.test.tsx  TranscriptFeed.test.tsx
tests/services/: analysis.test.ts  deepgram.test.ts  fireflies.test.ts  openclaw.test.ts
