[package]
name = "aibos-lens"
version = "0.1.0"
edition = "2021"

[lib]
name = "aibos_lens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
tokio = { version = "1", features = ["sync"] }
tauri-plugin-global-shortcut = "2"
